# muxdantic

./: .tmuxp.yaml  MUXDANTIC_CONCEPT.md  README.md  SPEC.md  devenv.nix  pyproject.toml
.agent/: AGENTS.md
.agent/.skills/cli-contract/: SKILL.md
.agent/.skills/core-models/: SKILL.md
.agent/.skills/job-lifecycle/: SKILL.md
.agent/.skills/locking/: SKILL.md
.agents/skills/: CLI_CONTRACT.md  CORE_MODELS.md  JOB_LIFECYCLE.md  LOCKING.md  LOGGING_JSONL.md  SECURITY_SAFETY.md  TEST_STRATEGY.md  TMUX_COMMANDS.md  WORKSPACE_RESOLUTION.md
.roadmap/: 00_OVERVIEW.md  AREA_00_BASELINE_SCAFFOLD.md  AREA_01_CONTRACTS_MODELS_ERRORS.md  AREA_02_WORKSPACE_RESOLUTION.md  AREA_03_TMUX_WRAPPER.md  AREA_04_LOCKING_AND_ENSURE.md  AREA_05_JOBS_RUN_LIST_KILL.md  AREA_06_LOGGING_JSONL.md  AREA_07_CLI_WIRING.md  AREA_08_TESTS_AND_QUALITY.md  AREA_09_DOCS_README.md  FILE_OWNERSHIP.md  INTEGRATION_CHECKLIST.md
muxdantic/: __init__.py  cli.py  ensure.py  errors.py  jobs.py  jsonio.py  locking.py  logging.py  logging_sink.py  models.py  tags.py  tmux.py  workspace.py
tests/: test_cli.py  test_dev_step_00.py  test_dev_step_01.py  test_dev_step_02.py  test_dev_step_03.py  test_dev_step_04.py  test_dev_step_05.py  test_dev_step_06.py  test_dev_step_07.py  test_dev_step_08.py  test_dev_step_09.py  test_ensure_unit.py  test_errors.py  test_integration_tmux.py  test_jobs_naming_parsing.py  test_locking.py  test_logging_sink.py  test_models_validation.py  test_smoke_env.py  test_tag_sanitize.py  test_tmux_format_parsing.py  test_workspace_resolution.py
(+5 files in other folders)
