[project]
name = "muxdantic"
version = "0.1.0"
description = "tmux/tmuxp orchestration contracts and CLI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Bullish Design", email = "BullishDesignEngineering@gmail.com" }]
dependencies = [
  "pydantic>=2",
  "pyyaml",
  "tmuxp>=1.64.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
]

[project.scripts]
muxdantic = "muxdantic.cli:main"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["muxdantic"]

[tool.hatch.build.targets.sdist]
include = [
  "muxdantic",
  "tests",
  "SPEC.md",
  "MUXDANTIC_CONCEPT.md",
  "pyproject.toml",
  "README.md",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
